@@ -1,3 +1,8 @@
+2002-01-04  Bradford Hovinen  <hovinen@ximian.com>
+
+	* control/Makefile.am (gnome_theme_preview_LDADD): Use
+	$(CONTROL_{CFLAGS|LIBS}) rather than @CONTROL_{CFLAGS|LIBS}@
+
 2001-12-08  Richard Hestilow  <hestilow@ximian.com>
 	
 	* Port to GConf.
